edit main.handlebars nav

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,8 +11,14 @@
         <a href="/">Pod Freaks</a>
       </h1>
       <nav>
-        <a href="/genres">Genres</a>
+        <a href="/featured-podcasts">Featured Podcasts</a>
+        <a href="/featured-genres">Featured Genres</a>
+        <a href="/reviews">Reviews</a>
         <a href="/profile">profile</a>
+        <form action="">
+          <input type="text" placeholder="Search.." name="search" />
+          <button type="submit"><i class="fa fa-search"></i></button>
+        </form>
       </nav>
     </header>
     <main>
