--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,6 +19,7 @@
           <input type="text" placeholder="Search.." name="search" />
           <button type="submit"><i class="fa fa-search"></i></button>
         </form>
+        <button></button>
       </nav>
     </header>
     <main>
