some css work and geners handle bar

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,14 +1,18 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pod Freaks</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Pod Freaks</title>
+  <link href="/stylesheets/style.css" rel="stylesheet">
+</head>
+
+<body>
+  <div class="">
     <header>
       <h1>
-        <a href="/">Pod Freaks</a>
+        <a href="/"> Pod Freaks </a>
       </h1>
       <nav>
         <a href="/genres">Genres</a>
@@ -18,6 +22,8 @@
     <main>
       {{{body}}}
     </main>
+  </div>
 
-  </body>
+</body>
+
 </html>
