--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,7 @@
   </head>
   <body>
     {{> navbar}}
+    {{> hero}}
     {{!-- <header>
       <h1>
         <a href="/">Pod Freaks</a>
@@ -34,6 +35,8 @@
     <div class="container">
     {{{body}}}
   </div>
+
+  
     </main>
   {{#if loggedIn}}
       <script src="/js/logout.js"></script>
