navbar and hero style

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,10 +10,12 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+      <link rel="stylesheet" href="../../public/stylesheets/style.css">
   </head>
   <body>
     {{> navbar}}
     {{> hero}}
+    {{> featured-podcast-genre}}
     {{!-- <header>
       <h1>
         <a href="/">Pod Freaks</a>
@@ -29,6 +31,7 @@
         {{/if}}
       </nav>
     </header> --}}
+    {{> footer}}
     <main>
 
       <!--Gutter for L and R of page-->
