--- a/views/partials/hero.handlebars
+++ b/views/partials/hero.handlebars
@@ -1,46 +1,19 @@
-<img src="../../public/images/Code.jpg" class="img-fluid" alt="" />
+<div class="jumbotron jumbotron-fluid">
+  <h1 class="display-4 text-center mt-5 pt-5">Welcome to PodFreaks!</h1>
+  <p class="lead text-center">Come join our community podcast lovers...</p>
+  {{! <img
+    src="../../images/Code.jpg"
+    width="100%"
+    height="400"
+    class="img-fluid img-rounded"
+    alt="Cinque Terre"
+  /> }}
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm">
-      hi ipsum dolor sit amet consectetur adipisicing elit. Quaerat omnis natus
-      voluptatibus earum! Velit, dolore dicta. Libero amet harum pariatur, quod
-      ex dolorem, expedita perferendis laboriosam consequuntur quos, odit dicta!
-    </div>
-    <div class="col-sm">
-      <img
-        width="200px"
-        height="200px"
-        src="../../public/images/Code.jpg"
-        alt=""
-      />
-    </div>
-  </div>
-</div>
-
-<div class="container">
-  <div class="row">
-    <div class="col-sm-8">col-sm-8</div>
-    <div class="col-sm-4">col-sm-4</div>
-  </div>
-  <div class="row">
-    <div class="col-sm">col-sm</div>
-    <div class="col-sm">col-sm</div>
-    <div class="col-sm">col-sm</div>
-  </div>
-</div>
-
-<!--CARDS 3-->
-<div class="container">
-  <div class="row">
-    <div class="col">
-      1 of 3
-    </div>
-    <div class="col">
-      2 of 3
-    </div>
-    <div class="col">
-      3 of 3
-    </div>
-  </div>
+  <p class="lead text-center">
+    <a
+      class="btn btn-light btn-lg mt-4 mb-5"
+      href="/login"
+      role="button"
+    >Login</a>
+  </p>
 </div>
