--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,23 +1,22 @@
 <html lang="en">
-  <head>
+  <header>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pod Freaks</title>
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-      <link rel="stylesheet" href="../../public/stylesheets/style.css">
-  </head>
+
+  </header>
   <body>
+    <header>
     {{> navbar}}
-    {{> hero}}
-    {{> featured-podcast-genre}}
-    {{!-- <header>
-      <h1>
+      {{!-- <h1>
         <a href="/">Pod Freaks</a>
       </h1>
       <nav>
@@ -29,9 +28,9 @@
         {{else}}
           <a href="/login">Log In</a>
         {{/if}}
-      </nav>
-    </header> --}}
-    {{> footer}}
+      </nav> --}}
+    </header>
+
     <main>
 
       <!--Gutter for L and R of page-->
@@ -41,6 +40,8 @@
 
   
     </main>
+
+       {{> footer}}
   {{#if loggedIn}}
       <script src="/js/logout.js"></script>
     {{/if}}
@@ -49,5 +50,6 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+
   </body>
 </html>
