--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,17 +1,9 @@
 <div class="jumbotron jumbotron-fluid">
-  <div id="fun">
+  <div id="hero">
     <h1 class="display-4 text-center fw-bold text-light mt-5 pt-5">Welcome to
       PodFreaks!</h1>
     <p class="lead text-light text-center">Come join our community podcast
       lovers...</p>
-    {{! <img
-    src="../../images/Code.jpg"
-    width="100%"
-    height="400"
-    class="img-fluid img-rounded"
-    alt="Cinque Terre"
-  /> }}
-
     <p class="lead text-center">
       <a
         class="btn btn-light btn-lg mt-4 mb-5"
@@ -29,92 +21,97 @@
     <h1 class="display-6 text-center">Featured Podcasts</h1>
     <p class="lead text-center mb-5">Checkout our featured podcasts!</p>
   </div>
+  <div
+    class="d-flex justify-content-center justify-content-sm-center flex-sm-wrap"
+  >
+    <div class="row">
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+          <img src="../../images/Code.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Podcast Title</h5>
+            <p class="card-text">Here is a description of this podcast.....</p>
+            <p class="card-text"><small class="text-muted">content we want to
+                apear here</small></p>
+          </div>
+        </div>
+      </div>
 
-  <div class="row">
-    <div class="col">
-      <div class="card" style="width: 18rem;">
-        <img src="../../images/Code.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Podcast Title</h5>
-          <p class="card-text">Here is a description of this podcast.....</p>
-          <p class="card-text"><small class="text-muted">content we want to
-              apear here</small></p>
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+          <img src="../../images/Code.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Podcast Title</h5>
+            <p class="card-text">Here is a description of this podcast.....</p>
+            <p class="card-text"><small class="text-muted">content we want to
+                apear here</small></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+          <img src="../../images/Code.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Podcast Title</h5>
+            <p class="card-text">Here is a description of this podcast.....</p>
+            <p class="card-text"><small class="text-muted">content we want to
+                apear here</small></p>
+          </div>
         </div>
       </div>
     </div>
-
-    <div class="col">
-      <div class="card" style="width: 18rem;">
-        <img src="../../images/Code.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Podcast Title</h5>
-          <p class="card-text">Here is a description of this podcast.....</p>
-          <p class="card-text"><small class="text-muted">content we want to
-              apear here</small></p>
-        </div>
-      </div>
-    </div>
-
-    <div class="col">
-      <div class="card" style="width: 18rem;">
-        <img src="../../images/Code.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Podcast Title</h5>
-          <p class="card-text">Here is a description of this podcast.....</p>
-          <p class="card-text"><small class="text-muted">content we want to
-              apear here</small></p>
-        </div>
-      </div>
-    </div>
-
   </div>
 </div>
 
 <div class="container bg-secondary p-2 mb-5 mt-5 text-dark bg-opacity-10"></div>
 
-<div class="container mt-5">
+<!--FEATURED GENRES-->
+<div class="container d-flex justify-content-center mt-5">
   <div>
     <h1 class="display-6 text-center">Featured Genres</h1>
     <p class="lead text-center mb-5">Checkout our featured genres!</p>
   </div>
+  <div
+    class="d-flex justify-content-center justify-content-sm-center flex-sm-wrap"
+  >
+    <div class="row">
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+          <img src="../../images/Code.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Genre 1</h5>
+            <p class="card-text">Here is a description of this genre.....</p>
+            <p class="card-text"><small class="text-muted">content we want to
+                apear here</small></p>
+          </div>
+        </div>
+      </div>
 
-  <div class="row">
-    <div class="col">
-      <div class="card" style="width: 18rem;">
-        <img src="../../images/Code.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Genre 1</h5>
-          <p class="card-text">Here is a description of this genre.....</p>
-          <p class="card-text"><small class="text-muted">content we want to
-              apear here</small></p>
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+          <img src="../../images/Code.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Genre 2</h5>
+            <p class="card-text">Here is a description of this genre.....</p>
+            <p class="card-text"><small class="text-muted">content we want to
+                apear here</small></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card" style="width: 18rem;">
+          <img src="../../images/Code.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Genre 3</h5>
+            <p class="card-text">Here is a description of this genre.....</p>
+            <p class="card-text"><small class="text-muted">content we want to
+                apear here</small></p>
+          </div>
         </div>
       </div>
     </div>
-
-    <div class="col">
-      <div class="card" style="width: 18rem;">
-        <img src="../../images/Code.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Genre 2</h5>
-          <p class="card-text">Here is a description of this genre.....</p>
-          <p class="card-text"><small class="text-muted">content we want to
-              apear here</small></p>
-        </div>
-      </div>
-    </div>
-
-    <div class="col">
-      <div class="card" style="width: 18rem;">
-        <img src="../../images/Code.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Genre 3</h5>
-          <p class="card-text">Here is a description of this genre.....</p>
-          <p class="card-text"><small class="text-muted">content we want to
-              apear here</small></p>
-        </div>
-      </div>
-    </div>
-
   </div>
 </div>
 
