--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,16 @@
 
 } */
 
-#fun {
+#hero {
   background-image: url("../images/Code.jpg");
+  height: 50vh;
+}
+
+#footer-break {
+  height: 2px;
+  width: 80vw;
+}
+
+#copy {
+  font-size: 13px;
 }
