--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,43 +1,37 @@
-<!--Need login form connected to nav link-->
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand font-monospace" href="/">PodFreaks</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <!--for burger menu when smaller breakpoint is reached-->
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a
-            class="nav-link "
-            aria-current="page"
-            href="/genres"
-          >Genres</a>
-        </li>
-              <li class="nav-item">
-          {{#if loggedIn}}
-            <a class="nav-link" href="/profile">Profile</a>
-            <button id="logout">Log out</button>
-          {{else}}
-            <a class="nav-link" href="/login">Log In</a>
-          {{/if}}
-        </li>
-        </li>
-      </ul>
-      
-
-    </div>
+<footer>
+  <div
+    class="container-fluid navbar d-flex justify-content-center navbar-expand-lg text-center"
+  >
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a
+          class="nav-link fs-6 text-muted"
+          aria-current="page"
+          href="/homepage"
+        >Home</a>
+      </li>
+      <li>
+        <a class="nav-link fs-6 mx-5 text-muted" href="/genres">Genre</a>
+      </li>
+      <li class="nav-item">
+        {{#if loggedIn}}
+          <a class="nav-link fs-6 text-muted" href="/profile">Profile</a>
+          <button id="logout">Log out</button>
+        {{else}}
+          <a class="nav-link fs-6 text-muted" href="/login">Log In</a>
+        {{/if}}
+      </li>
+    </ul>
   </div>
-</nav>
-
- 
+  <div
+    class="container bg-secondary mb-3 bg-opacity-50"
+    id="footer-break"
+  ></div>
+  <ul
+    class="navbar-nav container-fluid navbar d-flex justify-content-center navbar-expand-lg text-center"
+  >
+    <li class="nav-item">
+      <p id="copy">&copy; 2022 PodFreaks Inc.</p>
+    </li>
+  </ul>
+</footer>
