--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,5 +1,4 @@
 <!--Need login form connected to nav link-->
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand font-monospace" href="/">PodFreaks</a>
@@ -17,6 +16,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+          <a
+            class="nav-link "
+            aria-current="page"
+            href="/homepage"
+          >Home</a>
+        </li>
         <li class="nav-item">
           <a
             class="nav-link "
@@ -32,6 +38,7 @@
             <a class="nav-link" href="/login">Log In</a>
           {{/if}}
         </li>
+
         </li>
       </ul>
       <form class="d-flex">
