--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,6 @@
-<div class="jumbotron jumbotron-fluid">
-  <div id="hero">
+<!--HERO-->
+<div class="jumbotron jumbotron-fluid" id="hero">
+  <div>
     <h1 class="display-4 text-center fw-bold text-light mt-5 pt-5">Welcome to
       PodFreaks!</h1>
     <p class="lead text-light text-center">Come join our community podcast
@@ -14,18 +15,17 @@
   </div>
 </div>
 
-<!--CARDS 3-->
-
+<!--FEATURED GENRES-->
 <div class="container mt-5">
   <div>
     <h1 class="display-6 text-center">Featured Podcasts</h1>
-    <p class="lead text-center mb-5">Checkout our featured podcasts!</p>
+    <p class="lead text-center mb-2">Checkout our featured podcasts!</p>
   </div>
   <div
     class="d-flex justify-content-center justify-content-sm-center flex-sm-wrap"
   >
     <div class="row">
-      <div class="col">
+      <div class="col mt-4">
         <div class="card" style="width: 18rem;">
           <img src="../../images/Code.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
@@ -37,7 +37,7 @@
         </div>
       </div>
 
-      <div class="col">
+      <div class="col mt-4">
         <div class="card" style="width: 18rem;">
           <img src="../../images/Code.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
@@ -49,7 +49,7 @@
         </div>
       </div>
 
-      <div class="col">
+      <div class="col mt-4">
         <div class="card" style="width: 18rem;">
           <img src="../../images/Code.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
@@ -67,7 +67,7 @@
 <div class="container bg-secondary p-2 mb-5 mt-5 text-dark bg-opacity-10"></div>
 
 <!--FEATURED GENRES-->
-<div class="container d-flex justify-content-center mt-5">
+<div class="container mt-5">
   <div>
     <h1 class="display-6 text-center">Featured Genres</h1>
     <p class="lead text-center mb-5">Checkout our featured genres!</p>
@@ -76,7 +76,7 @@
     class="d-flex justify-content-center justify-content-sm-center flex-sm-wrap"
   >
     <div class="row">
-      <div class="col">
+      <div class="col mt-4">
         <div class="card" style="width: 18rem;">
           <img src="../../images/Code.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
@@ -88,7 +88,7 @@
         </div>
       </div>
 
-      <div class="col">
+      <div class="col mt-4">
         <div class="card" style="width: 18rem;">
           <img src="../../images/Code.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
@@ -100,7 +100,7 @@
         </div>
       </div>
 
-      <div class="col">
+      <div class="col mt-4">
         <div class="card" style="width: 18rem;">
           <img src="../../images/Code.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
@@ -115,4 +115,6 @@
   </div>
 </div>
 
-<div class="container bg-secondary p-2 mb-5 mt-5 text-dark bg-opacity-10"></div>
+<div
+  class="container bg-secondary p-2 mb-5 mt-5 break text-dark bg-opacity-10"
+></div>
