--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -20,7 +20,7 @@
           <a
             class="nav-link "
             aria-current="page"
-            href="/homepage"
+            href="/"
           >Home</a>
         </li>
         <li class="nav-item">
