--- a/views/genres.handlebars
+++ b/views/genres.handlebars
@@ -1,3 +1,54 @@
-<header>
-    <p>Choose Your Genre </p>
-</header>
+<div class="display-4 text-center fw-bold text-dark mt-5 pt-5 font-family-sans-serif">
+    <p> Choose Your Genre </p>
+</div>
+
+<div>
+    <div class="col mt-4">
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Genre Title</h5>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div>
+    <div class="col mt-4">
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Genre Title</h5>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div>
+    <div class="col mt-4">
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Genre Title</h5>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<div>
+    <div class="col mt-4">
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Genre Title</h5>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div>
+    <div class="col mt-4">
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Genre Title</h5>
+            </div>
+        </div>
+    </div>
+</div>
