changes in repo

--- a/views/genres.handlebars
+++ b/views/genres.handlebars
@@ -2,52 +2,73 @@
     <p> Choose Your Genre </p>
 </div>
 
-<div>
-    <div class="col mt-4">
-        <div class="card" style="width: 18rem;">
+
+<div class="card mb-3" style="max-width: 540px;">
+    <div class="row no-gutters">
+        <div class="col-md-4">
+            <img src="../images/the-official-pod.jpg" class="card-img" alt="Entertainment">
+        </div>
+        <div class="col-md-8">
             <div class="card-body">
-                <h5 class="card-title">Genre Title</h5>
+                <h5 class="card-title">Genre</h5>
+                <p class="card-text">Come listen to these wonderful podcast's here!</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
     </div>
 </div>
-
-<div>
-    <div class="col mt-4">
-        <div class="card" style="width: 18rem;">
+<div class="card mb-3" style="max-width: 540px;">
+    <div class="row no-gutters">
+        <div class="col-md-4">
+            <img src="../images/the-official-pod.jpg" class="card-img" alt="Entertainment">
+        </div>
+        <div class="col-md-8">
             <div class="card-body">
-                <h5 class="card-title">Genre Title</h5>
+                <h5 class="card-title">Genre</h5>
+                <p class="card-text">Come listen to these wonderful podcast's here!</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
     </div>
 </div>
-
-<div>
-    <div class="col mt-4">
-        <div class="card" style="width: 18rem;">
-            <div class="card-body">
-                <h5 class="card-title">Genre Title</h5>
-            </div>
+<div class="card mb-3" style="max-width: 540px;">
+    <div class="row no-gutters">
+        <div class="col-md-4">
+            <img src="../images/the-official-pod.jpg" class="card-img" alt="Entertainment">
         </div>
-    </div>
-
-</div>
-
-<div>
-    <div class="col mt-4">
-        <div class="card" style="width: 18rem;">
+        <div class="col-md-8">
             <div class="card-body">
-                <h5 class="card-title">Genre Title</h5>
+                <h5 class="card-title">Genre</h5>
+                <p class="card-text">Come listen to these wonderful podcast's here!</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
     </div>
 </div>
-
-<div>
-    <div class="col mt-4">
-        <div class="card" style="width: 18rem;">
+<div class="card mb-3" style="max-width: 540px;">
+    <div class="row no-gutters">
+        <div class="col-md-4">
+            <img src="../images/the-official-pod.jpg" class="card-img" alt="Entertainment">
+        </div>
+        <div class="col-md-8">
             <div class="card-body">
-                <h5 class="card-title">Genre Title</h5>
+                <h5 class="card-title">Genre</h5>
+                <p class="card-text">Come listen to these wonderful podcast's here!</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="card mb-3" style="max-width: 540px;">
+    <div class="row no-gutters">
+        <div class="col-md-4">
+            <img src="../images/the-official-pod.jpg" class="card-img" alt="Entertainment">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="card-title">Genre</h5>
+                <p class="card-text">Come listen to these wonderful podcast's here!</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
     </div>
