genre page touch up's

--- a/views/genres.handlebars
+++ b/views/genres.handlebars
@@ -1,74 +1,64 @@
-<div class="display-4 text-center fw-bold text-dark mt-5 pt-5 font-family-sans-serif">
+<div class="display-4 text-center fw-bold text-dark mt-5 pt-5 font-monospace">
     <p> Choose Your Genre </p>
 </div>
 
-
-<div class="card mb-3" style="max-width: 540px;">
-    <div class="row no-gutters">
-        <div class="col-md-4">
-            <img src="../images/the-official-pod.jpg" class="card-img" alt="Entertainment">
-        </div>
-        <div class="col-md-8">
+<div class="row row-cols-1 row-cols-md-3 mt- 5 pt-5">
+    <div class="col mb-4">
+        <div class="card">
+            <img src="../images/escaping-nxivm-pod.webp" class="card-img-top" alt="True Crime">
             <div class="card-body">
                 <h5 class="card-title">Genre</h5>
-                <p class="card-text">Come listen to these wonderful podcast's here!</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <p class="card-text font-monospace">Come enjoy the list of titles here!</p>
+                <li></li>
             </div>
         </div>
     </div>
-</div>
-<div class="card mb-3" style="max-width: 540px;">
-    <div class="row no-gutters">
-        <div class="col-md-4">
-            <img src="../images/the-official-pod.jpg" class="card-img" alt="Entertainment">
-        </div>
-        <div class="col-md-8">
+    <div class="col mb-4">
+        <div class="card">
+            <img src="../images/the-brilliant-idiots-pod.jpg" class="card-img-top" alt="Comedy">
             <div class="card-body">
                 <h5 class="card-title">Genre</h5>
-                <p class="card-text">Come listen to these wonderful podcast's here!</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <p class="card-text font-monospace">Come enjoy the list of titles here!</p>
+                <li></li>
             </div>
         </div>
     </div>
-</div>
-<div class="card mb-3" style="max-width: 540px;">
-    <div class="row no-gutters">
-        <div class="col-md-4">
-            <img src="../images/the-official-pod.jpg" class="card-img" alt="Entertainment">
-        </div>
-        <div class="col-md-8">
+    <div class="col mb-4">
+        <div class="card">
+            <img src="../images/lex-fridman-pod.png" class="card-img-top" alt="Technology">
             <div class="card-body">
                 <h5 class="card-title">Genre</h5>
-                <p class="card-text">Come listen to these wonderful podcast's here!</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <p class="card-text font-monospace">Come enjoy the list of titles here!</p>
             </div>
         </div>
     </div>
-</div>
-<div class="card mb-3" style="max-width: 540px;">
-    <div class="row no-gutters">
-        <div class="col-md-4">
-            <img src="../images/the-official-pod.jpg" class="card-img" alt="Entertainment">
-        </div>
-        <div class="col-md-8">
+    <div class="col mb-4">
+        <div class="card">
+            <img src="../images/the-weekly-planet-pod.jpg" class="card-img-top" alt="Entertainment">
             <div class="card-body">
                 <h5 class="card-title">Genre</h5>
-                <p class="card-text">Come listen to these wonderful podcast's here!</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <p class="card-text font-monospace">Come enjoy the list of titles here!</p>
+                <li></li>
             </div>
         </div>
     </div>
-</div>
-<div class="card mb-3" style="max-width: 540px;">
-    <div class="row no-gutters">
-        <div class="col-md-4">
-            <img src="../images/the-official-pod.jpg" class="card-img" alt="Entertainment">
-        </div>
-        <div class="col-md-8">
+    <div class="col mb-4">
+        <div class="card">
+            <img src="../images/breaking-points-pod.jpg" class="card-img-top" alt="News">
             <div class="card-body">
                 <h5 class="card-title">Genre</h5>
-                <p class="card-text">Come listen to these wonderful podcast's here!</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <p class="card-text font-monospace">Come enjoy the list of titles here!</p>
+                <li></li>
+            </div>
+        </div>
+    </div>
+    <div class="col mb-4">
+        <div class="card">
+            <img src="../images/hardcore-history-pod.webp" class="card-img-top" alt="Edcucational">
+            <div class="card-body">
+                <h5 class="card-title">Genre</h5>
+                <p class="card-text font-monospace">Come enjoy the list of titles here!</p>
+                <li></li>
             </div>
         </div>
     </div>
