--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <form id="login-form" class="mt-5 mb-5">
   <div class="mb-3">
-    <label for="email-login" class="form-label">Email Adress</label>
+    <label for="email-login" class="form-label">Email Address</label>
     <input
       type="text"
       id="email-login"
