sign up form complete

--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -36,6 +36,9 @@
             <button id="logout">Log out</button>
           {{else}}
             <a class="nav-link" href="/login">Log In</a>
+           <li class="nav-item">
+            <a class="nav-link" href="/signup">Sign Up</a>
+          </li> 
           {{/if}}
         </li>
 
