--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,6 +1,6 @@
 <form id="signup-form" class="mt-5 mb-5">
     <div class="mb-3">
-        <label for="email-signup" class="form-label">Username</label>
+        <label for="username-signup" class="form-label">Username</label>
         <input type="text" id="username-signup" class="form-control" aria-describedby="emailHelp" />
     </div>
     <div class="mb-3">
