--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,8 +3,12 @@
 } */
 
 #hero {
-  background-image: url("../images/Code.jpg");
+  background-image: url("../images/Hero-image.png");
   height: 50vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 
 #footer-break {
