--- a/views/genres.handlebars
+++ b/views/genres.handlebars
@@ -1,9 +1,32 @@
-<div class="display-4 text-center fw-bold text-dark mt-5 pt-5 font-family-sans-serif">
-    <p> Choose Your Genre </p>
+<div
+  class="display-4 text-center fw-bold text-dark mt-5 pt-5 font-family-sans-serif"
+>
+  <p> Choose Your Genre </p>
 </div>
 
+{{#each genres}}
+  <div class="card mb-3" style="max-width: 540px;">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img
+          src="../images/the-official-pod.jpg"
+          class="card-img"
+          alt="Entertainment"
+        />
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">{{genre_name}}</h5>
+          {{#each podcasts}}
+            <a href="/podcasts/{{id}}">{{title}}</a>
+          {{/each}}
+        </div>
+      </div>
+    </div>
+  </div>
+{{/each}}
 
-<div class="card mb-3" style="max-width: 540px;">
+{{! <div class="card mb-3" style="max-width: 540px;">
     <div class="row no-gutters">
         <div class="col-md-4">
             <img src="../images/the-official-pod.jpg" class="card-img" alt="Entertainment">
@@ -58,18 +81,4 @@
             </div>
         </div>
     </div>
-</div>
-<div class="card mb-3" style="max-width: 540px;">
-    <div class="row no-gutters">
-        <div class="col-md-4">
-            <img src="../images/the-official-pod.jpg" class="card-img" alt="Entertainment">
-        </div>
-        <div class="col-md-8">
-            <div class="card-body">
-                <h5 class="card-title">Genre</h5>
-                <p class="card-text">Come listen to these wonderful podcast's here!</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-    </div>
-</div>
+</div> }}
