genre page touch ups

--- a/views/genres.handlebars
+++ b/views/genres.handlebars
@@ -9,7 +9,29 @@
             <div class="card-body">
                 <h5 class="card-title">Genre</h5>
                 <p class="card-text font-monospace">Come enjoy the list of titles here!</p>
-                <li></li>
+                <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Podcast id</h5>
+                            <small class="text-muted">Updated 1 day ago</small>
+                        </div>
+                        <p class="mb-1">Podcast description</p>
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Podcast id</h5>
+                            <small class="text-muted">Updated 1 day ago</small>
+                        </div>
+                        <p class="mb-1">Podcast description</p>
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Podcast id</h5>
+                            <small class="text-muted">Updated 1 day ago</small>
+                        </div>
+                        <p class="mb-1">Podcast description</p>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
@@ -19,7 +41,29 @@
             <div class="card-body">
                 <h5 class="card-title">Genre</h5>
                 <p class="card-text font-monospace">Come enjoy the list of titles here!</p>
-                <li></li>
+                                <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Podcast id</h5>
+                            <small class="text-muted">Updated 1 day ago</small>
+                        </div>
+                        <p class="mb-1">Podcast description</p>
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Podcast id</h5>
+                            <small class="text-muted">Updated 1 day ago</small>
+                        </div>
+                        <p class="mb-1">Podcast description</p>
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Podcast id</h5>
+                            <small class="text-muted">Updated 1 day ago</small>
+                        </div>
+                        <p class="mb-1">Podcast description</p>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
@@ -29,6 +73,29 @@
             <div class="card-body">
                 <h5 class="card-title">Genre</h5>
                 <p class="card-text font-monospace">Come enjoy the list of titles here!</p>
+                                <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Podcast id</h5>
+                            <small class="text-muted">Updated 1 day ago</small>
+                        </div>
+                        <p class="mb-1">Podcast description</p>
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Podcast id</h5>
+                            <small class="text-muted">Updated 1 day ago</small>
+                        </div>
+                        <p class="mb-1">Podcast description</p>
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Podcast id</h5>
+                            <small class="text-muted">Updated 1 day ago</small>
+                        </div>
+                        <p class="mb-1">Podcast description</p>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
@@ -38,7 +105,29 @@
             <div class="card-body">
                 <h5 class="card-title">Genre</h5>
                 <p class="card-text font-monospace">Come enjoy the list of titles here!</p>
-                <li></li>
+                                <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Podcast id</h5>
+                            <small class="text-muted">Updated 1 day ago</small>
+                        </div>
+                        <p class="mb-1">Podcast description</p>
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Podcast id</h5>
+                            <small class="text-muted">Updated 1 day ago</small>
+                        </div>
+                        <p class="mb-1">Podcast description</p>
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Podcast id</h5>
+                            <small class="text-muted">Updated 1 day ago</small>
+                        </div>
+                        <p class="mb-1">Podcast description</p>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
@@ -48,7 +137,29 @@
             <div class="card-body">
                 <h5 class="card-title">Genre</h5>
                 <p class="card-text font-monospace">Come enjoy the list of titles here!</p>
-                <li></li>
+                                <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Podcast id</h5>
+                            <small class="text-muted">Updated 1 day ago</small>
+                        </div>
+                        <p class="mb-1">Podcast description</p>
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Podcast id</h5>
+                            <small class="text-muted">Updated 1 day ago</small>
+                        </div>
+                        <p class="mb-1">Podcast description</p>
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Podcast id</h5>
+                            <small class="text-muted">Updated 1 day ago</small>
+                        </div>
+                        <p class="mb-1">Podcast description</p>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
@@ -58,7 +169,29 @@
             <div class="card-body">
                 <h5 class="card-title">Genre</h5>
                 <p class="card-text font-monospace">Come enjoy the list of titles here!</p>
-                <li></li>
+                                <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Podcast id</h5>
+                            <small class="text-muted">Updated 1 day ago</small>
+                        </div>
+                        <p class="mb-1">Podcast description</p>
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Podcast id</h5>
+                            <small class="text-muted">Updated 1 day ago</small>
+                        </div>
+                        <p class="mb-1">Podcast description</p>
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Podcast id</h5>
+                            <small class="text-muted">Updated 1 day ago</small>
+                        </div>
+                        <p class="mb-1">Podcast description</p>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
