--- a/views/podcast.handlebars
+++ b/views/podcast.handlebars
@@ -4,23 +4,40 @@
   <p>Description: <br />{{podcast.description}}</p>
 </section>
 <section id="comments">
-  <h4>Comments:</h4>
-  {{#if podcast.comments.length}}
-    <ol>
-      {{#each podcast.comments as |com|}}
-        <li>
-          <h5>{{com.title}}</h5>
-          <p>{{com.comment_text}}
-            <br />
-            by
-            {{com.user.username}}
-            at
-            {{com.createdAt}}
-          </p>
-        </li>
-      {{/each}}
-    </ol>
-  {{else}}
-    <h5>No comments yet</h5>
+  {{#if loggedIn}}
+    <form id="comment-form">
+      <div>
+        <label for="comment-title">Title</label>
+        <input type="text" id="comment-title" name="comment-title" />
+      </div>
+      <div>
+        <textarea name="comment-content" id="comment-content"></textarea>
+      </div>
+      <button type="submit" id="comment-submit">Add Comment</button>
+    </form>
   {{/if}}
+  <div>
+    <h4>Comments:</h4>
+    {{#if podcast.comments.length}}
+      <ol>
+        {{#each podcast.comments as |com|}}
+          <li>
+            <h5>{{com.title}}</h5>
+            <p>{{com.comment_text}}
+              <br />
+              by
+              {{com.user.username}}
+              at
+              {{com.createdAt}}
+            </p>
+          </li>
+        {{/each}}
+      </ol>
+    {{else}}
+      <h5>No comments yet</h5>
+    {{/if}}
+  </div>
 </section>
+{{#if loggedIn}}
+  <script src="/js/comment.js"></script>
+{{/if}}
