--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -17,3 +17,7 @@
   </div>
 </form>
 <script src="/js/login.js"></script>
+
+<div class="d-flex justify-content-center">
+  <img src="/images/" alt="" />
+</div>
