--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,3 +1,2 @@
-<div class="d-flex justify-content-center">
-  <img src="../public/images/404-PF.png" alt="" />
+<div class="d-flex justify-content-center error">
 </div>
