position of footer

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,6 +18,7 @@
 </form>
 <script src="/js/login.js"></script>
 
-<div class="d-flex justify-content-center">
-  <img src="/images/" alt="" />
+<div>
+  <p class="fs-4 font-monospace text-center">Oops! Looks like something went
+    terribly wrong... Go ahead a try again!</p>
 </div>
