--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,4 +1,6 @@
-<footer>
+<!--need to fix position of footer-->
+<div class="d-flex flex-column min-vh-100"></div>
+<footer class="mt-auto">
   <div
     class="container-fluid navbar d-flex justify-content-center navbar-expand-lg text-center"
   >
