--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -33,7 +33,9 @@
               <li class="nav-item">
           {{#if loggedIn}}
             <a class="nav-link" href="/profile">Profile</a>
-            <button id="logout">Log out</button>
+            <li class="nav-item">
+            <a class="nav-link" href="" id="logout"> Log out</a>
+      </li>
           {{else}}
             <a class="nav-link" href="/login">Log In</a>
            <li class="nav-item">
