styling tabs for all pages

--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,5 +1,5 @@
 <!--Need login form connected to nav link-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand font-monospace" href="/">PodFreaks</a>
     <button
