--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,5 +1,5 @@
 <!--need to fix position of footer-->
-<div class="d-flex flex-column min-vh-100"></div>
+{{!-- <div class="d-flex flex-column min-vh-100"> --}}
 <footer class="mt-auto">
   <div
     class="container-fluid navbar d-flex justify-content-center navbar-expand-lg text-center"
@@ -18,11 +18,14 @@
       <li class="nav-item">
         {{#if loggedIn}}
           <a class="nav-link fs-6 text-muted" href="/profile">Profile</a>
-          <button id="logout">Log out</button>
+                </li>
+            <li class="nav-item">
+            <a class="nav-link fs-6 ms-5 text-muted" href="" id="logout"> Log out</a>
+      </li>
         {{else}}
           <a class="nav-link fs-6 text-muted" href="/login">Log In</a>
         {{/if}}
-      </li>
+
     </ul>
   </div>
   <div
@@ -37,3 +40,4 @@
     </li>
   </ul>
 </footer>
+{{!-- </div> --}}
