--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,6 +1,6 @@
 <!--need to fix position of footer-->
 {{!-- <div class="d-flex flex-column min-vh-100"> --}}
-<footer class="mt-auto">
+<footer class="mt-auto footer">
   <div
     class="container-fluid navbar d-flex justify-content-center navbar-expand-lg text-center"
   >
