--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,7 +1,7 @@
 <!--image is not working-->
 
 <div class="d-flex justify-content-center error">
-  <img src="" alt="" />
+  <img src="public/images/error-404-PF.png" alt="" />
 </div>
 
 <div>
