--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,7 +34,7 @@
     <main>
 
       <!--Gutter for L and R of page-->
-    <div class="container">
+    <div class="container body-margin">
     {{{body}}}
   </div>
 
